Added styles to contact section

--- a/index.html
+++ b/index.html
@@ -318,17 +318,17 @@
             <div class="wrapper section-padding">
                 <div class="contact__row">
                     <div class="contact__info">
-                        <div class="contact__box">
-                            <h3 class="contact__box-title"> <i class="contact__box-icon fas fa-home"></i> adress </h3>
-                            <p class="contact__box-text">9th Floor <br> St James's Bldg <br> 61-95 Oxford St <br> Manchester M1 6EJ <br> UK</p>
+                        <div class="contact__info__box">
+                            <h3 class="contact__info__box-title"> <i class="contact__info__box-icon fas fa-home"></i> adress </h3>
+                            <p class="contact__info__box-text">9th Floor <br> St James's Bldg <br> 61-95 Oxford St <br> Manchester M1 6EJ <br> UK</p>
                         </div>
-                        <div class="contact__box">
-                            <h3 class="contact__box-title"> <i class="contact__box-icon fas fa-evelope"></i> e-mail </h3>
-                            <p class="contact__box-text">oriental-journeys@xyz.qwer</p>
+                        <div class="contact__info__box">
+                            <h3 class="contact__info__box-title"> <i class="contact__info__box-icon fas fa-envelope"></i> e-mail </h3>
+                            <p class="contact__info__box-text">oriental-journeys@xyz.qwer</p>
                         </div>
-                        <div class="contact__box">
-                            <h3 class="contact__box-title"> <i class="contact__box-icon fas fa-phone"></i> phone </h3>
-                            <p class="contact__box-text">+123 4567890</p>
+                        <div class="contact__info__box">
+                            <h3 class="contact__info__box-title"> <i class="contact__info__box-icon fas fa-phone"></i> phone </h3>
+                            <p class="contact__info__box-text">+123 4567890</p>
                         </div>
                     </div>
                 </div>
